--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,3 +1,18 @@
 h1 {
     color: red;
 }
+h2 {
+    text-align: center;
+}
+h3 {
+    text-align: center;
+}
+form.login_form {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 450px;
+    background-color: pink;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 10px;
+}
