--- a/templates/base.html
+++ b/templates/base.html
@@ -10,9 +10,15 @@
         <title>{{ title }}</title>
     </head>
     <body>
+    <header>
         <div class="alert alert-dark" role="alert">
             <h1>Миссия Колонизация Марса</h1>
         </div>
-        <h4>И на Марсе будут яблони цвести!</h4>>
+        <h4>И на Марсе будут яблони цвести!</h4>
+    </header>
+    <!-- Begin page content -->
+    <main role="main" class="container">
+        {% block content %}{% endblock %}
+    </main>
     </body>
 </html>
