--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         <div class="alert alert-dark" role="alert">
             <h1>Миссия Колонизация Марса</h1>
         </div>
-        <h4>И на Марсе будут яблони цвести!</h4>
+        <h4 id="base">И на Марсе будут яблони цвести!</h4>
     </header>
     <!-- Begin page content -->
     <main role="main" class="container">
