--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,22 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Записи в блоге</h1>
-{% for item in news%}
-<div class="col-md6 border rounded">
-    <h2>{{item.title}}</h2>
+<div id="tb">
+    <h1>Works log</h1>
+    {% for item in jobs%}
     <div>
-        {{item.content}}
+        <table>
+            <caption>Action #{{loop.index}}</caption>
+            <tr><th>Title of activity</th><th>Team Leader</th><th>Duration</th><th>List of collaborators</th><th>Is finished</th></tr>
+            <tr><td>{{item.job}}</td><td>{{tm[item.team_leader]}}</td><td>{{item.work_size}}</td><td>{{item.collaborators}}</td>
+                {% if item.is_finished %}
+                    <td class="table-success">Is finished</td>
+                {% else %}
+                    <td class="table-danger">Is not finished</td>
+                {% endif %}
+            </tr>
+        </table>
     </div>
-    <div>
-        Автор - {{item.user.name}}, Дата написания - {{item.created_date}}
-    </div>
+    {% endfor %}
 </div>
-{% endfor %}
 {% endblock %}
