--- a/templates/base.html
+++ b/templates/base.html
@@ -12,19 +12,28 @@
     </head>
     <body>
     <header>
-        <div class="alert alert-dark" role="alert">
-            <h1>Миссия Колонизация Марса</h1>
+        <div class="alert alert-dark" role="alert" id="header">
+            <div id="labels">
+                <h1>Миссия Колонизация Марса</h1>
+                <h4>И на Марсе будут яблони цвести!</h4>
+            </div>
+            <div id="user-info">
+                {% if current_user.is_authenticated %}
+                <p>
+                    <a class="navbar-brand" href="/logout">{{ current_user.surname }} {{ current_user.name }}</a>
+                </p>
+                <p>
+                    <a href="/jobs" class="btn btn-secondary">Add job</a>
+                </p>
+                {% else %}
+                    <p>
+                        <a class="btn btn-primary " href="/register">Registration</a>
+                        <a class="btn btn-success" href="/login">Login</a>
+                    </p>
+                {% endif %}
+            </div>
         </div>
-        <h4 id="base">И на Марсе будут яблони цвести!</h4>
     </header>
-    {% if current_user.is_authenticated %}
-    <a class="navbar-brand" href="/logout">{{ current_user.name }}</a>
-    {% else %}
-    <p>
-        <a class="btn btn-primary " href="/register">Зарегистрироваться</a>
-        <a class="btn btn-success" href="/login">Войти</a>
-    </p>
-    {% endif %}
     <!-- Begin page content -->
     <main role="main" class="container">
         {% block content %}{% endblock %}
