--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,35 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h1>Записи в блоге</h1>
-{% for item in news%}
-<div class="col-md6 border rounded">
-    <h2>{{item.title}}</h2>
-    <div>
-        {{item.content}}
+<link rel="stylesheet" type="text/css" href="static/css/style.css" />
+{% if current_user.is_authenticated %}
+    <div id="tb">
+        <h1>Works log</h1>
+        {% for item in jobs%}
+        <div>
+            <table>
+                <caption>Action #{{loop.index}}</caption>
+                <tr><th>Title of activity</th><th>Team Leader</th><th>Duration</th><th>List of collaborators</th><th>Is finished</th></tr>
+                <tr><td>{{item.job}}</td><td>{{tm[item.team_leader]}}</td><td>{{item.work_size}}</td><td>{{item.collaborators}}</td>
+                    {% if item.is_finished %}
+                        <td class="table-success">Is finished</td>
+                    {% else %}
+                        <td class="table-danger">Is not finished</td>
+                    {% endif %}
+                </tr>
+            </table>
+            {% if current_user.is_authenticated and current_user == item.user %}
+                <div>
+                    <a href="/jobs/{{ item.id }}" class="btn btn-warning">
+                        Изменить
+                    </a>
+                    <a href="/jobs_delete/{{ item.id }}" class="btn btn-danger">
+                        Удалить
+                    </a>
+                </div>
+            {% endif %}
+        </div>
+        {% endfor %}
     </div>
-    <div>
-        Автор - {{item.user.name}}, Дата написания - {{item.created_date}}
-    </div>
-</div>
-{% endfor %}
+{% endif %}
 {% endblock %}
