--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,43 +1,57 @@
-#header {
-    position: relative;
-    height: 120px;
+.header {
+    background-color: #F8F9FA;
 }
-#labels h4 {
+.header-title {
+    display: inline-block;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+.header-profile {
+    display: inline-block;
+    position: relative;
+    left: 400px
+}
+.header-about {
+    display: inline-block;
+    position: relative;
+    left: 900px
+}
+#zxc {
     margin-left: 20px;
     color: grey;
 }
-#labels {
-    position: absolute;
-    width: 600px;
+#tb div {
+    position: relative;
+    top: -10px;
+    margin: 10px;
+    left: -15px;
 }
-#user-info {
-    position: absolute;
-    width: 300px;
-    left: 1500px;
-    text-align: right;
-}
-#tb
-h1  {
+#tb h1  {
     text-align: center;
 }
-th {
+#tb th {
     text-transform: capitalize;
     padding: 15px 15px;
+    text-align: center;
     background: #dddddd;
     font-size: 18px;
 }
-td {
+#tb td {
     text-transform: capitalize;
     padding: 15px 15px;
-    background: #eeeeff;
     text-align: center;
     font-size: 18px;
 }
-table {
+.td-def {
+    background: #eeeeff;
+}
+#tb table {
    border-collapse: collapse;
    border-spacing: 10px, 10px;
+   width: 1100px;
+   left: 100px
 }
-caption {
+#tb caption {
     caption-side: top;
     text-align: left;
     font-size: 30px;
