--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -14,6 +14,15 @@
         {% endfor %}
     </p>
     <p>
+        {{ form.team_leader.label }}<br>
+        {{ form.team_leader(class="form-control") }}<br>
+        {% for error in form.team_leader.errors %}
+            <p content="alert alert-danger" role="alert">
+                {{ error }}
+            </p>
+        {% endfor %}
+    </p>
+    <p>
         {{ form.work_size.label }}<br>
         {{ form.work_size(class="form-control") }}<br>
         {% for error in form.work_size.errors %}
@@ -26,24 +35,6 @@
         {{ form.collaborators.label }}<br>
         {{ form.collaborators(class="form-control") }}<br>
         {% for error in form.collaborators.errors %}
-            <p content="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.start_date.label }}<br>
-        {{ form.start_date(class="form-control") }}<br>
-        {% for error in form.start_date.errors %}
-            <p content="alert alert-danger" role="alert">
-                {{ error }}
-            </p>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.end_date.label }}<br>
-        {{ form.end_date(class="form-control") }}<br>
-        {% for error in form.end_date.errors %}
             <p content="alert alert-danger" role="alert">
                 {{ error }}
             </p>
