--- a/templates/2.html
+++ b/templates/2.html
@@ -1,13 +1,23 @@
-{% extends "base.html" %}
-
-{% block content %}
-    {% if 'инженер' in prof or 'строитель' in prof %}
-    <h2>Инженерные тренажеры</h2>
-    <img src="https://yastatic.net/s3/lyceum/content/images/second-year/web/MARS-2-2.png"
-         alt="здесь должна была быть картинка, но не нашлась">
-    {% else %}
-    <h2>Научные симуляторы</h2>
-    <img src="https://yastatic.net/s3/lyceum/content/images/second-year/web/MARS-2-2.png"
-         alt="здесь должна была быть картинка, но не нашлась">
-    {% endif %}
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+          crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="static/css/style.css" />
+    </head>
+    <body>
+        <h1 style="text-align: center">Загрузим файл</h1>
+        <form method="post" enctype="multipart/form-data" class="form">
+           <div class="form-group">
+                <label for="photo">Выберите файл</label>
+                <input type="file" class="form-control-file" id="photo" name="file">
+            </div>
+            <img src="static/img/img.png">
+            <button type="submit" class="btn btn-primary">Отправить</button>
+        </form>
+    </body>
+</html>
