--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,3 +58,12 @@
     color: black;
     font-weight: bold;
 }
+.form {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 450px;
+    background-color: #ffcc00;
+    border: 1px solid gray;
+    border-radius: 5px;
+    padding: 10px;
+}
