--- a/templates/jobs.html
+++ b/templates/jobs.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
+<link rel="stylesheet" type="text/css" href="static/css/style.css" />
 <h1>{{ label }}</h1>
 <form action="" method="post">
     {{ form.hidden_tag() }}
