--- a/templates/login.html
+++ b/templates/login.html
@@ -2,28 +2,46 @@
 
 {% block content %}
 <link rel="stylesheet" type="text/css" href="static/css/style.css" />
-    <h1>Authorization</h1>
+    <img src="https://yastatic.net/s3/lyceum/content/images/second-year/web/MARS-2-7.png">
+    <h1>Аварийный доступ</h1>
     <form action="" method="post">
         {{ form.hidden_tag() }}
             <p>
-                {{ form.email.label }}<br>
-                {{ form.email(class="form-control", type="email") }}<br>
-                {% for error in form.email.errors %}
+                {{ form.id_astro.label }}<br>
+                {{ form.id_astro(class="form-control", type="label") }}<br>
+                {% for error in form.id_astro.errors %}
                     <div class="alert alert-danger" role="alert">
                         {{ error }}
                     </div>
                 {% endfor %}
             </p>
             <p>
-                {{ form.password.label }}<br>
-                {{ form.password(class="form-control", type="password") }}<br>
-                {% for error in form.password.errors %}
+                {{ form.pass_astro.label }}<br>
+                {{ form.pass_astro(class="form-control", type="password") }}<br>
+                {% for error in form.pass_astro.errors %}
                     <div class="alert alert-danger" role="alert">
                         {{ error }}
                     </div>
                 {% endfor %}
             </p>
-        <p>{{ form.remember_me() }} {{ form.remember_me.label }}</p>
+            <p>
+                {{ form.id_cap.label }}<br>
+                {{ form.id_cap(class="form-control", type="label") }}<br>
+                {% for error in form.id_cap.errors %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
+                {% endfor %}
+            </p>
+            <p>
+                {{ form.pass_cap.label }}<br>
+                {{ form.pass_cap(class="form-control", type="password") }}<br>
+                {% for error in form.pass_cap.errors %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
+                {% endfor %}
+            </p>
         <p>{{ form.submit(type="submit", class="btn btn-primary") }}</p>
         <div>{{ message }}</div>
     </form>
